bundler/test-data/generate-docs/source/samples_templates.yaml
apiVersion: v1
kind: List
items:
# Samples
- apiVersion: constraints.gatekeeper.sh/v1alpha1
  kind: GCPIAMRestrictServiceAccountKeyTypeConstraintV1
  metadata:
    name: iam_restrict_service_account_key_type
    annotations:
      # This constraint is not certified by CIS.
      bundles.validator.forsetisecurity.org/cis-v1.1: 1.03
  spec:
    severity: high
    parameters: {}
- apiVersion: constraints.gatekeeper.sh/v1alpha1
  kind: GCPGKEEnableStackdriverLoggingConstraintV1
  metadata:
    name: enable_gke_stackdriver_logging
    annotations:
      description: Ensure stackdriver logging is enabled on a GKE cluster
      # This constraint has not been validated by the formal CIS certification process.
      bundles.validator.forsetisecurity.org/cis-v1.0: 7.01
  spec:
    severity: high
    match:
      gcp:
        target: ["organization/*"]
    parameters: {}
# Templates
- apiVersion: templates.gatekeeper.sh/v1alpha1
  kind: ConstraintTemplate
  metadata:
    name: gcp-always-violates-v1
  spec:
    crd:
      spec:
        names:
          kind: GCPAlwaysViolatesConstraintV1
        validation:
          openAPIV3Schema:
            properties: {}
    targets:
    validation.gcp.forsetisecurity.org:
        rego: | #INLINE("validator/always_violates.rego")
            #
            # Copyright 2018 Google LLC
            #
            # Licensed under the Apache License, Version 2.0 (the "License");
            # you may not use this file except in compliance with the License.
            # You may obtain a copy of the License at
            #
            #      http://www.apache.org/licenses/LICENSE-2.0
            #
            # Unless required by applicable law or agreed to in writing, software
            # distributed under the License is distributed on an "AS IS" BASIS,
            # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            # See the License for the specific language governing permissions and
            # limitations under the License.
            #
            
            package templates.gcp.GCPAlwaysViolatesConstraintV1
            
            import data.validator.gcp.lib as lib
            
            deny[{
              "msg": message,
              "details": metadata,
            }] {
              message := "violates on all resources."
              metadata := {"asset": input.asset}
            }
            #ENDINLINE
